syntax = "proto3";
package pb;

option go_package = "github.com/airlangga-hub/microservices/services/order/pb";

message OrderedProduct {
    string id = 1;
    string name = 2;
    string description = 3;
    int64 price = 4;
    int32 quantity = 5;
}

message Order {
    int32 id = 1;
    int32 account_id = 2;
    repeated OrderedProduct products = 3;
    int64 total_price = 4;
    bytes created_at = 5;
}

message PostOrderRequest {
    int32 account_id = 1;
    repeated OrderedProduct products = 2;
}

message PostOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    int32 id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message GetOrdersByAccountIDRequest {
    int32 account_id = 1;
}

message GetOrdersByAccountIDResponse {
    repeated Order orders = 1;
}

service OrderService {
    rpc PostOrder(PostOrderRequest) returns (PostOrderResponse);
    rpc GetOrdersByAccountID(GetOrdersByAccountIDRequest) returns (GetOrdersByAccountIDResponse);
}
